--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -64,7 +64,7 @@ body[data-theme="dark"] {
   kbd {
     border-color: $dark-light;
     color: $dark-white;
-    text-shadow: 0 1px 0 $dark-black;
+    text-shadow: 0 1px 0 $black;
   }
 
   // horizontal rule
